# markit

./: pyproject.toml
src/: __init__.py  uow.py
src/api/: __init__.py
src/api/depends/: __init__.py
src/api/routers/: __init__.py  auth.py  calendar.py  event.py  sharing.py  user.py
src/api/schema/: __init__.py
src/api/security/: auth.py  jwt.py
src/api/utils/: __init__.py
src/database/: __init__.py  entities.py  mappers.py
src/domain/models/: __init__.py
src/domain/services/: __init__.py
src/repositories/: __init__.py
tests/: conftest.py  test_auth.py  test_calendar_repo.py  test_events.py  test_sharing.py  test_user_repo.py
